# DNN-from-scratch

./: .clangd  CMakeLists.txt  build.sh  constants.h  main.cpp  neural_network.cpp  neural_network.h  render.cpp  render.h  run.sh
test/: CMakeLists.txt  run_test.sh  test.cpp
